--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
               </li>
             </ul>
             <a href="tel:909451614" class="header__tel">Phone</a>
-            <a href="https://t.me/sH10_11" class="header__tg"> Telegram </a>
+            <a href="https://t.me/wtfoth" class="header__tg"> Telegram </a>
           </nav>
           <img class="header__menu" src="./imgs/menu.svg" alt="" />
         </div>
